<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/selectedimage1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/check"
        android:scaleType="centerInside"
        android:clipToOutline="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintWidth_percent="0.6667"
        app:layout_constraintHeight_percent="0.6667"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/donateDoneTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:text="@string/donateDoneTitle"
        android:textAppearance="@style/donateDoneTitle"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="294dp" />

    <TextView
        android:id="@+id/donateDoneContent"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="center_horizontal"
        android:text="@string/donateDoneContent"
        android:textAppearance="@style/donateDoneContent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="353dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/checkDonate"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="513dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
