<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/inputrelate"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/selectedimage1"
            android:layout_width="357dp"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_box"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/img3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/black"
            android:layout_width="357dp"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:alpha="0.5"
            android:background="@drawable/rounded_box"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/black" />

        <TextView
            android:id="@+id/donationName"
            android:layout_width="330dp"
            android:layout_height="35dp"
            android:text="@string/donationName"
            android:textColor="@color/white"
            android:textSize="9pt"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="112dp"
            android:layout_marginLeft="42dp"/>

        <TextView
            android:id="@+id/company"
            android:layout_width="357dp"
            android:layout_height="35dp"
            android:text="@string/company"
            android:textColor="@color/white"
            android:textSize="7pt"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="42dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/inputrelate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerInParent="true"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/howpay"
            android:layout_width="357dp"
            android:layout_height="35dp"
            android:text="결제 방법"
            android:textColor="@color/black"
            android:textSize="10pt"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="180dp" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:clickable="false"
            android:focusable="false"
            android:text="간편 계좌"
            android:textColor="#A7AAB2"
            android:textSize="7pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/radioButton2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="무통장 입금"
            android:textSize="7pt"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="275dp" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:background="#F3F3F3"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="315dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="가상 계좌는 하단의 ‘결제하기’를 누르면 확인할 수 있습니다."
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/pay"
            android:textColor="#000000"
            android:textSize="12sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="360dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="47dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="380dp">

                <EditText
                    android:id="@+id/accountnumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/textbox"
                    android:paddingLeft="5dp"
                    android:hint="계좌번호"
                    android:inputType="number"
                    android:textSize="15dp"
                    android:padding="10dp"/>

            </RelativeLayout>

            <Space
                android:layout_width="5dp"
                android:layout_height="0dp"/>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_height="47dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="380dp">

                <Spinner
                    android:id="@+id/bank"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="7dp"
                    android:entries="@array/bank"
                    android:textSize="10dp"
                    android:hint="계좌번호"
                    android:background="@drawable/textbox"
                    android:paddingLeft="5dp" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="357dp"
            android:layout_height="35dp"
            android:text="메세지"
            android:textColor="@color/black"
            android:textSize="10pt"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="445dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="MJDoner 관리자에게 전할 메시지를 입력해 주세요."
            android:textColor="#000000"
            android:textSize="12sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="480dp" />

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="500dp">

            <EditText
                android:id="@+id/mes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:background="@drawable/textbox"
                android:paddingLeft="5dp"
                android:hint="메세지 입력"
                android:textSize="15dp"
                android:padding="10dp"
                android:inputType="textCapSentences|textAutoCorrect"
                android:gravity="start"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/rounded_paybox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/donationName_donate"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_centerInParent="true" >
            <TextView
                android:id="@+id/paymentAmount"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:text="50,000원"
                android:textColor="@color/white"
                android:textSize="10pt"
                android:textStyle="bold" />

            <Button
                android:id="@+id/payButton"
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:paddingTop="3dp"
                android:text="결제하기"
                android:textColor="@color/black"
                android:textSize="8pt"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
